--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
+/.firebase
 /dist
 /tmp
 /out-tsc
+/public
 # Only exists if Bazel was run
 /bazel-out
 
